tiny-script-interpreter/test/bad/return_in_top_level.ena
// error: runtime

return; // TODO: deny by parser
